sdoc/antlr/sdoc1Parser.py
# Generated from sdoc/antlr/sdoc1Parser.g4 by ANTLR 4.5.1
# encoding: utf-8
from antlr4 import *
from io import StringIO



class sdoc1Parser ( Parser ):

    grammarFileName = "sdoc1Parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'\\comment'", 
                     "'\\debug'", "'\\elif'", "'\\else'", "'\\endif'", "'\\expression'", 
                     "'\\if'", "'\\include'", "'\\notice'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'['", "']'", "'*'", "'/'", 
                     "'+'", "'-'", "'=='", "'>'", "'>='", "'&&'", "'||'", 
                     "'<'", "'<='", "'!='", "'='" ]

    symbolicNames = [ "<INVALID>", "TEXT", "LINE_COMMENT", "COMMENT", "DEBUG", 
                      "ELIF", "ELSE", "ENDIF", "EXPRESSION", "IF", "INCLUDE", 
                      "NOTICE", "SDOC2_COMMAND", "SIMPLE_OBRACE", "SIMPLE_CBRACE", 
                      "SIMPLE_ARG", "EXPR_OBRACE", "EXPR_CBRACE", "EXPR_WS", 
                      "EXPR_OBRACKET", "EXPR_CBRACKET", "EXPR_MULT", "EXPR_DIV", 
                      "EXPR_ADD", "EXPR_MINUS", "EXPR_EQUAL", "EXPR_GT", 
                      "EXPR_GTE", "EXPR_LOGICAL_AND", "EXPR_LOGICAL_OR", 
                      "EXPR_LT", "EXPR_LTE", "EXPR_NOT_EQUAL", "EXPR_ASSIGN", 
                      "EXPR_IDENTIFIER", "EXPR_INTEGER_CONSTANT", "EXPR_STRING_CONSTANT" ]

    RULE_sdoc = 0
    RULE_text = 1
    RULE_command = 2
    RULE_cmd_comment = 3
    RULE_cmd_debug = 4
    RULE_cmd_expression = 5
    RULE_cmd_if = 6
    RULE_cmd_include = 7
    RULE_cmd_notice = 8
    RULE_cmd_sdoc2 = 9
    RULE_primaryExpression = 10
    RULE_postfixExpression = 11
    RULE_multiplicativeExpression = 12
    RULE_additiveExpression = 13
    RULE_relationalExpression = 14
    RULE_equalityExpression = 15
    RULE_logicalAndExpression = 16
    RULE_logicalOrExpression = 17
    RULE_assignmentExpression = 18
    RULE_assignmentOperator = 19
    RULE_expression = 20

    ruleNames =  [ "sdoc", "text", "command", "cmd_comment", "cmd_debug", 
                   "cmd_expression", "cmd_if", "cmd_include", "cmd_notice", 
                   "cmd_sdoc2", "primaryExpression", "postfixExpression", 
                   "multiplicativeExpression", "additiveExpression", "relationalExpression", 
                   "equalityExpression", "logicalAndExpression", "logicalOrExpression", 
                   "assignmentExpression", "assignmentOperator", "expression" ]

    EOF = Token.EOF
    TEXT=1
    LINE_COMMENT=2
    COMMENT=3
    DEBUG=4
    ELIF=5
    ELSE=6
    ENDIF=7
    EXPRESSION=8
    IF=9
    INCLUDE=10
    NOTICE=11
    SDOC2_COMMAND=12
    SIMPLE_OBRACE=13
    SIMPLE_CBRACE=14
    SIMPLE_ARG=15
    EXPR_OBRACE=16
    EXPR_CBRACE=17
    EXPR_WS=18
    EXPR_OBRACKET=19
    EXPR_CBRACKET=20
    EXPR_MULT=21
    EXPR_DIV=22
    EXPR_ADD=23
    EXPR_MINUS=24
    EXPR_EQUAL=25
    EXPR_GT=26
    EXPR_GTE=27
    EXPR_LOGICAL_AND=28
    EXPR_LOGICAL_OR=29
    EXPR_LT=30
    EXPR_LTE=31
    EXPR_NOT_EQUAL=32
    EXPR_ASSIGN=33
    EXPR_IDENTIFIER=34
    EXPR_INTEGER_CONSTANT=35
    EXPR_STRING_CONSTANT=36

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class SdocContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdoc1Parser.CommandContext)
            else:
                return self.getTypedRuleContext(sdoc1Parser.CommandContext,i)


        def text(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdoc1Parser.TextContext)
            else:
                return self.getTypedRuleContext(sdoc1Parser.TextContext,i)


        def getRuleIndex(self):
            return sdoc1Parser.RULE_sdoc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSdoc" ):
                return visitor.visitSdoc(self)
            else:
                return visitor.visitChildren(self)




    def sdoc(self):

        localctx = sdoc1Parser.SdocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sdoc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << sdoc1Parser.TEXT) | (1 << sdoc1Parser.LINE_COMMENT) | (1 << sdoc1Parser.DEBUG) | (1 << sdoc1Parser.EXPRESSION) | (1 << sdoc1Parser.IF) | (1 << sdoc1Parser.INCLUDE) | (1 << sdoc1Parser.NOTICE) | (1 << sdoc1Parser.SDOC2_COMMAND))) != 0):
                self.state = 44
                token = self._input.LA(1)
                if token in [sdoc1Parser.LINE_COMMENT, sdoc1Parser.DEBUG, sdoc1Parser.EXPRESSION, sdoc1Parser.IF, sdoc1Parser.INCLUDE, sdoc1Parser.NOTICE, sdoc1Parser.SDOC2_COMMAND]:
                    self.state = 42
                    self.command()

                elif token in [sdoc1Parser.TEXT]:
                    self.state = 43
                    self.text()

                else:
                    raise NoViableAltException(self)

                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TextContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self):
            return self.getToken(sdoc1Parser.TEXT, 0)

        def getRuleIndex(self):
            return sdoc1Parser.RULE_text

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitText" ):
                return visitor.visitText(self)
            else:
                return visitor.visitChildren(self)




    def text(self):

        localctx = sdoc1Parser.TextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_text)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(sdoc1Parser.TEXT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommandContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmd_comment(self):
            return self.getTypedRuleContext(sdoc1Parser.Cmd_commentContext,0)


        def cmd_debug(self):
            return self.getTypedRuleContext(sdoc1Parser.Cmd_debugContext,0)


        def cmd_expression(self):
            return self.getTypedRuleContext(sdoc1Parser.Cmd_expressionContext,0)


        def cmd_if(self):
            return self.getTypedRuleContext(sdoc1Parser.Cmd_ifContext,0)


        def cmd_include(self):
            return self.getTypedRuleContext(sdoc1Parser.Cmd_includeContext,0)


        def cmd_notice(self):
            return self.getTypedRuleContext(sdoc1Parser.Cmd_noticeContext,0)


        def cmd_sdoc2(self):
            return self.getTypedRuleContext(sdoc1Parser.Cmd_sdoc2Context,0)


        def getRuleIndex(self):
            return sdoc1Parser.RULE_command

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = sdoc1Parser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_command)
        try:
            self.state = 58
            token = self._input.LA(1)
            if token in [sdoc1Parser.LINE_COMMENT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.cmd_comment()

            elif token in [sdoc1Parser.DEBUG]:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.cmd_debug()

            elif token in [sdoc1Parser.EXPRESSION]:
                self.enterOuterAlt(localctx, 3)
                self.state = 53
                self.cmd_expression()

            elif token in [sdoc1Parser.IF]:
                self.enterOuterAlt(localctx, 4)
                self.state = 54
                self.cmd_if()

            elif token in [sdoc1Parser.INCLUDE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 55
                self.cmd_include()

            elif token in [sdoc1Parser.NOTICE]:
                self.enterOuterAlt(localctx, 6)
                self.state = 56
                self.cmd_notice()

            elif token in [sdoc1Parser.SDOC2_COMMAND]:
                self.enterOuterAlt(localctx, 7)
                self.state = 57
                self.cmd_sdoc2()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Cmd_commentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LINE_COMMENT(self):
            return self.getToken(sdoc1Parser.LINE_COMMENT, 0)

        def getRuleIndex(self):
            return sdoc1Parser.RULE_cmd_comment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmd_comment" ):
                return visitor.visitCmd_comment(self)
            else:
                return visitor.visitChildren(self)




    def cmd_comment(self):

        localctx = sdoc1Parser.Cmd_commentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_cmd_comment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(sdoc1Parser.LINE_COMMENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Cmd_debugContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEBUG(self):
            return self.getToken(sdoc1Parser.DEBUG, 0)

        def EXPR_OBRACE(self):
            return self.getToken(sdoc1Parser.EXPR_OBRACE, 0)

        def EXPR_CBRACE(self):
            return self.getToken(sdoc1Parser.EXPR_CBRACE, 0)

        def expression(self):
            return self.getTypedRuleContext(sdoc1Parser.ExpressionContext,0)


        def getRuleIndex(self):
            return sdoc1Parser.RULE_cmd_debug

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmd_debug" ):
                return visitor.visitCmd_debug(self)
            else:
                return visitor.visitChildren(self)




    def cmd_debug(self):

        localctx = sdoc1Parser.Cmd_debugContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cmd_debug)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(sdoc1Parser.DEBUG)
            self.state = 63
            self.match(sdoc1Parser.EXPR_OBRACE)
            self.state = 65
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << sdoc1Parser.EXPR_IDENTIFIER) | (1 << sdoc1Parser.EXPR_INTEGER_CONSTANT) | (1 << sdoc1Parser.EXPR_STRING_CONSTANT))) != 0):
                self.state = 64
                self.expression()


            self.state = 67
            self.match(sdoc1Parser.EXPR_CBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Cmd_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXPRESSION(self):
            return self.getToken(sdoc1Parser.EXPRESSION, 0)

        def EXPR_OBRACE(self):
            return self.getToken(sdoc1Parser.EXPR_OBRACE, 0)

        def expression(self):
            return self.getTypedRuleContext(sdoc1Parser.ExpressionContext,0)


        def EXPR_CBRACE(self):
            return self.getToken(sdoc1Parser.EXPR_CBRACE, 0)

        def getRuleIndex(self):
            return sdoc1Parser.RULE_cmd_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmd_expression" ):
                return visitor.visitCmd_expression(self)
            else:
                return visitor.visitChildren(self)




    def cmd_expression(self):

        localctx = sdoc1Parser.Cmd_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_cmd_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(sdoc1Parser.EXPRESSION)
            self.state = 70
            self.match(sdoc1Parser.EXPR_OBRACE)
            self.state = 71
            self.expression()
            self.state = 72
            self.match(sdoc1Parser.EXPR_CBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Cmd_ifContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(sdoc1Parser.IF, 0)

        def EXPR_OBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(sdoc1Parser.EXPR_OBRACE)
            else:
                return self.getToken(sdoc1Parser.EXPR_OBRACE, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdoc1Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(sdoc1Parser.ExpressionContext,i)


        def EXPR_CBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(sdoc1Parser.EXPR_CBRACE)
            else:
                return self.getToken(sdoc1Parser.EXPR_CBRACE, i)

        def sdoc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(sdoc1Parser.SdocContext)
            else:
                return self.getTypedRuleContext(sdoc1Parser.SdocContext,i)


        def ENDIF(self):
            return self.getToken(sdoc1Parser.ENDIF, 0)

        def ELIF(self, i:int=None):
            if i is None:
                return self.getTokens(sdoc1Parser.ELIF)
            else:
                return self.getToken(sdoc1Parser.ELIF, i)

        def ELSE(self):
            return self.getToken(sdoc1Parser.ELSE, 0)

        def getRuleIndex(self):
            return sdoc1Parser.RULE_cmd_if

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmd_if" ):
                return visitor.visitCmd_if(self)
            else:
                return visitor.visitChildren(self)




    def cmd_if(self):

        localctx = sdoc1Parser.Cmd_ifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cmd_if)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(sdoc1Parser.IF)
            self.state = 75
            self.match(sdoc1Parser.EXPR_OBRACE)
            self.state = 76
            self.expression()
            self.state = 77
            self.match(sdoc1Parser.EXPR_CBRACE)
            self.state = 78
            self.sdoc()
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==sdoc1Parser.ELIF:
                self.state = 79
                self.match(sdoc1Parser.ELIF)
                self.state = 80
                self.match(sdoc1Parser.EXPR_OBRACE)
                self.state = 81
                self.expression()
                self.state = 82
                self.match(sdoc1Parser.EXPR_CBRACE)
                self.state = 83
                self.sdoc()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            _la = self._input.LA(1)
            if _la==sdoc1Parser.ELSE:
                self.state = 90
                self.match(sdoc1Parser.ELSE)
                self.state = 91
                self.sdoc()


            self.state = 94
            self.match(sdoc1Parser.ENDIF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Cmd_includeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INCLUDE(self):
            return self.getToken(sdoc1Parser.INCLUDE, 0)

        def SIMPLE_OBRACE(self):
            return self.getToken(sdoc1Parser.SIMPLE_OBRACE, 0)

        def SIMPLE_ARG(self):
            return self.getToken(sdoc1Parser.SIMPLE_ARG, 0)

        def SIMPLE_CBRACE(self):
            return self.getToken(sdoc1Parser.SIMPLE_CBRACE, 0)

        def getRuleIndex(self):
            return sdoc1Parser.RULE_cmd_include

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmd_include" ):
                return visitor.visitCmd_include(self)
            else:
                return visitor.visitChildren(self)




    def cmd_include(self):

        localctx = sdoc1Parser.Cmd_includeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cmd_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(sdoc1Parser.INCLUDE)
            self.state = 97
            self.match(sdoc1Parser.SIMPLE_OBRACE)
            self.state = 98
            self.match(sdoc1Parser.SIMPLE_ARG)
            self.state = 99
            self.match(sdoc1Parser.SIMPLE_CBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Cmd_noticeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOTICE(self):
            return self.getToken(sdoc1Parser.NOTICE, 0)

        def SIMPLE_OBRACE(self):
            return self.getToken(sdoc1Parser.SIMPLE_OBRACE, 0)

        def SIMPLE_ARG(self):
            return self.getToken(sdoc1Parser.SIMPLE_ARG, 0)

        def SIMPLE_CBRACE(self):
            return self.getToken(sdoc1Parser.SIMPLE_CBRACE, 0)

        def getRuleIndex(self):
            return sdoc1Parser.RULE_cmd_notice

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmd_notice" ):
                return visitor.visitCmd_notice(self)
            else:
                return visitor.visitChildren(self)




    def cmd_notice(self):

        localctx = sdoc1Parser.Cmd_noticeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_cmd_notice)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(sdoc1Parser.NOTICE)
            self.state = 102
            self.match(sdoc1Parser.SIMPLE_OBRACE)
            self.state = 103
            self.match(sdoc1Parser.SIMPLE_ARG)
            self.state = 104
            self.match(sdoc1Parser.SIMPLE_CBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Cmd_sdoc2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SDOC2_COMMAND(self):
            return self.getToken(sdoc1Parser.SDOC2_COMMAND, 0)

        def getRuleIndex(self):
            return sdoc1Parser.RULE_cmd_sdoc2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmd_sdoc2" ):
                return visitor.visitCmd_sdoc2(self)
            else:
                return visitor.visitChildren(self)




    def cmd_sdoc2(self):

        localctx = sdoc1Parser.Cmd_sdoc2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_cmd_sdoc2)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(sdoc1Parser.SDOC2_COMMAND)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimaryExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return sdoc1Parser.RULE_primaryExpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrimaryExpressionIdentifierContext(PrimaryExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a sdoc1Parser.PrimaryExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EXPR_IDENTIFIER(self):
            return self.getToken(sdoc1Parser.EXPR_IDENTIFIER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimaryExpressionIdentifier" ):
                return visitor.visitPrimaryExpressionIdentifier(self)
            else:
                return visitor.visitChildren(self)


    class PrimaryExpressionIntegerConstantContext(PrimaryExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a sdoc1Parser.PrimaryExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EXPR_INTEGER_CONSTANT(self):
            return self.getToken(sdoc1Parser.EXPR_INTEGER_CONSTANT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimaryExpressionIntegerConstant" ):
                return visitor.visitPrimaryExpressionIntegerConstant(self)
            else:
                return visitor.visitChildren(self)


    class PrimaryExpressionStringConstantContext(PrimaryExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a sdoc1Parser.PrimaryExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EXPR_STRING_CONSTANT(self):
            return self.getToken(sdoc1Parser.EXPR_STRING_CONSTANT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimaryExpressionStringConstant" ):
                return visitor.visitPrimaryExpressionStringConstant(self)
            else:
                return visitor.visitChildren(self)



    def primaryExpression(self):

        localctx = sdoc1Parser.PrimaryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_primaryExpression)
        try:
            self.state = 111
            token = self._input.LA(1)
            if token in [sdoc1Parser.EXPR_IDENTIFIER]:
                localctx = sdoc1Parser.PrimaryExpressionIdentifierContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(sdoc1Parser.EXPR_IDENTIFIER)

            elif token in [sdoc1Parser.EXPR_INTEGER_CONSTANT]:
                localctx = sdoc1Parser.PrimaryExpressionIntegerConstantContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(sdoc1Parser.EXPR_INTEGER_CONSTANT)

            elif token in [sdoc1Parser.EXPR_STRING_CONSTANT]:
                localctx = sdoc1Parser.PrimaryExpressionStringConstantContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.match(sdoc1Parser.EXPR_STRING_CONSTANT)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PostfixExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return sdoc1Parser.RULE_postfixExpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class PrimaryExpressionParentContext(PostfixExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a sdoc1Parser.PostfixExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def primaryExpression(self):
            return self.getTypedRuleContext(sdoc1Parser.PrimaryExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimaryExpressionParent" ):
                return visitor.visitPrimaryExpressionParent(self)
            else:
                return visitor.visitChildren(self)


    class PostfixExpressionExpressionContext(PostfixExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a sdoc1Parser.PostfixExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def postfixExpression(self):
            return self.getTypedRuleContext(sdoc1Parser.PostfixExpressionContext,0)

        def EXPR_OBRACKET(self):
            return self.getToken(sdoc1Parser.EXPR_OBRACKET, 0)
        def expression(self):
            return self.getTypedRuleContext(sdoc1Parser.ExpressionContext,0)

        def EXPR_CBRACKET(self):
            return self.getToken(sdoc1Parser.EXPR_CBRACKET, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPostfixExpressionExpression" ):
                return visitor.visitPostfixExpressionExpression(self)
            else:
                return visitor.visitChildren(self)



    def postfixExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = sdoc1Parser.PostfixExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_postfixExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = sdoc1Parser.PrimaryExpressionParentContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 114
            self.primaryExpression()
            self._ctx.stop = self._input.LT(-1)
            self.state = 123
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = sdoc1Parser.PostfixExpressionExpressionContext(self, sdoc1Parser.PostfixExpressionContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_postfixExpression)
                    self.state = 116
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 117
                    self.match(sdoc1Parser.EXPR_OBRACKET)
                    self.state = 118
                    self.expression()
                    self.state = 119
                    self.match(sdoc1Parser.EXPR_CBRACKET) 
                self.state = 125
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class MultiplicativeExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def postfixExpression(self):
            return self.getTypedRuleContext(sdoc1Parser.PostfixExpressionContext,0)


        def multiplicativeExpression(self):
            return self.getTypedRuleContext(sdoc1Parser.MultiplicativeExpressionContext,0)


        def EXPR_MULT(self):
            return self.getToken(sdoc1Parser.EXPR_MULT, 0)

        def EXPR_DIV(self):
            return self.getToken(sdoc1Parser.EXPR_DIV, 0)

        def getRuleIndex(self):
            return sdoc1Parser.RULE_multiplicativeExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplicativeExpression" ):
                return visitor.visitMultiplicativeExpression(self)
            else:
                return visitor.visitChildren(self)


